chapter edits and citation additions

--- a/chap2.tex
+++ b/chap2.tex
@@ -34,7 +34,7 @@ We find ourselves in an era of seemingly continual technological
 change that is strangely most noticeable in the most mundane parts of
 our lives---how we shop, how we communicate, how we find
 partners---almost as if ``designed by a bored researcher who kept one
-thumb permanently on the fast-forward button''\cite[p.
+thumb permanently on the fast-forward button'' \cite[p.
   7]{Neuromancer1984}. No longer does the future seem to be
 defined by flying cars and jetpacks. Instead, it is defined by
 information, and its collection and use. The stakes of autonomous
@@ -57,7 +57,7 @@ Union's Court of Justice
 ruled in the landmark Costeja decision that since Google is processing
 ``personal data,'' and acting as a ``data controller,'' it may be
 compelled to remove links to pages containing personal information
-from its search results.\cite{ICO} The EU ruling, in deference to European
+from its search results \cite{ICO}. The EU ruling, in deference to European
 tradition and contrary to that of the United States, places an
 individual's rights to privacy above the ability of users to access
 information online.\footnote{Specifically, ``whilst it is true that the
@@ -65,7 +65,7 @@ data subject’s rights also override, as a general rule, that interest
 of internet users, this balance may however depend, in specific cases,
 on the nature of the information in question and its sensitivity for
 the data subject’s private life and on the interest of the public in
-having that information.''\cite{COJCosteja}} There is growing recognition that publicly
+having that information'' \cite{COJCosteja}.} There is growing recognition that publicly
 available data can be highly sensitive and that it may be beneficial
 to allow individuals certain legal rights to control their own
 electronic reputations, at least in particular circumstances. Costeja
@@ -75,7 +75,7 @@ open public removal of ``public'' information.\footnote{This removal,
   however, is controlled and curated by Google itself, which has not
   waited for guidance on how to proceed but has forged forward on its
   own, as a way to set the standards by which information removal can
-  be justified.\cite{powlesChaparro}} But much of our
+  be justified \cite{powlesChaparro}.} But much of our
 information is even harder to control.
 
 Many current data-driven business models\footnote{See for example
@@ -101,12 +101,13 @@ sensing, in order to operate; but it may be that not all the
 information that is collected should be shared outside the immediate
 context of its use. What is sensed, and what can be appropriately
 transmitted back to servers for processing and storage, is of
-paramount importance: this is a question of privacy in context.\cite{nissenbaum}
+paramount importance: this is a question of privacy in context \cite{nissenbaum}.
 Following Nissenbaum, privacy must always be seen in the context of
-particular users and a particular use.\cite[p. 2]{nissenbaum} It is not that data about our
+particular users and a particular use \cite[p. 2]{nissenbaum}. It is not that data about our
 commuting routes, for example, should never be collected, but that collected data
 should not be sent uncritically to any third party without our
-knowledge or consent, a violation of our information norms.\cite[p. 3]{nissenbaum} 
+knowledge or consent, a violation of our information norms \cite[p.
+  3]{nissenbaum}. 
 Automated vehicles are and will continue to be networked
 technologies. This connectedness brings with it great possibilities
 for coordinating traffic and improving city planning, as well as great
@@ -132,8 +133,8 @@ connected? Current driverless car concepts depend on networked
 information for vehicle guidance. While, historically, certain
 guidance systems have been insulated from communications---inertial
 guidance systems for intercontinental ballistic
-missiles are a particular example of this,\cite{mackenzie}---and
-Google's vehicles use inertial navigation devices\cite{knightFurther}
+missiles are a particular example of this \cite{mackenzie}---and
+Google's vehicles use inertial navigation devices \cite{knightFurther}
 alongside other sources of position data, current navigation systems
 depend on global positioning satellites. Google's approach to
 driverless car development currently necessitates accurate
@@ -149,14 +150,14 @@ purposes of safety, security, and convenience. The system has the
 ability to automatically alert the authorities in case of an accident
 or theft. It also provides vehicle diagnostics to the owner's tablet
 or smartphone, and the OnStar app also allows the owner to configure settings, lock and
-unlock doors, and remotely operate the lights and horn.\cite{onstar}
+unlock doors, and remotely operate the lights and horn \cite{onstar}.
 While these vehicles are not (yet) autonomous, OnStar's present
 capabilities are representative of features that will become more common in highly
 connected and computerized vehicles, including autonomous ones.
 
 Additionally, vehicles that can receive information from each other and from the
 roadway are a top priority for the NHTSA, and have been on the
-research agenda for decades.\cite[p. 11]{wetmore} These concepts would
+research agenda for decades \cite[p. 11]{wetmore}. These concepts would
 collect and use data to streamline traffic flow and provide
 information to reduce delays and accidents. But there is potential to
 do far more with the available information,
@@ -170,12 +171,24 @@ revenue for the groups in position to collect them. Uber, which
 through its GPS-enabled ride-hiring applications still collects only a
 fraction of the data that would be available through a self-driving
 vehicle, has agreed to share its ride data with municipalities for purposes of
-city planning.\cite{uberJardin} Though this data is ostesibly being
+city planning \cite{uberJardin}. Though this data is ostesibly being
 shared for the public good, it also serves private ends: to curry favor with
 authorities that might otherwise attempt to shut the service down. The
 ride data can also be used to provide internal predictions to help
 Uber increase revenue by directing drivers to the right locations at
-the right times. And it would not be far-fetched, in the current
+the right times.\footnote{One potential reason for municipalities to
+  collect such data is dynamic road pricing. This is not fundamentally
+a bad idea if done in a way that is as non-discriminatory as possible,
+and as one of my informants noted in an interview, may be 
+the only reliable way to reduce congestion. However, putting another
+corporate entity in between road users and the road is not necessarily
+a good idea. It strikes me, since I am writing this shortly after the
+FCC's reclassification of Internet service under common carriage laws,
+that if we find ourselves in a battle over ``road neutrality'' in a
+decade or two, it will have a decided air of irony to it. Pervasive
+tracking and self-driving allow for all manner of road pricing
+schemes, some of which will be unduly discriminatory.} And it would
+not be far-fetched, in the current 
 information landscape, to see such information sold to third-party advertisers.
 
 % consider 1-2 sentences on risks of connected devices;
@@ -184,15 +197,15 @@ information landscape, to see such information sold to third-party advertisers.
 These sorts of security and privacy issues are not unique to
 autonomous vehicles, nor even to networked vehicles. What Roger Clarke
 calls ``dataveillance'' is already possible: electronic tolls already
-allow for a measure of tracking.\cite[p. 25]{nissenbaum} Networked traffic cameras are
+allow for a measure of tracking \cite[p. 25]{nissenbaum}. Networked traffic cameras are
 already being used to amass large databases of information about
 (non-networked) cars and their travel patterns by reading passing
-license plates.\cite[p. 26]{nissenbaum} With sufficient coverage of cities and regions,
+license plates \cite[p. 26]{nissenbaum}. With sufficient coverage of cities and regions,
 these databases can capture the movements of large segments of the
 population, and therefore include potentially sensitive information
 about people's movements. Despite this, their collection and use
 remains largely unregulated.\footnote{Groups such as the EFF and ACLU
-  are attempting to do something about this.\cite{kayyaliEFF}} California police are coming under
+  are attempting to do something about this \cite{kayyaliEFF}.} California police are coming under
 criticism from civil rights groups about their mass collection of
 vehicle position information through police license plate cameras.iv
 Clearly, these types of contested data collection are already
@@ -223,11 +236,11 @@ Existing vulnerabilities in web services and dealership practice
 allowed Ramos-Lopez to hijack 100 cars from a Texas dealership and
 either disable them or set
 the horns
-going.\cite{poulsenHacker} A
+going \cite{poulsenHacker}. A
 high-school student at a security camp in July of 2014 was apparently
 able to hack into an automobile with \$15 worth of components, and
 gain access to lights, horns, and even the remote start
-feature.\cite{bigelow14}
+feature \cite{bigelow14}.
 The
 potential for this kind of access gets more frightening when one
 considers the effects an integrated, network-connected vehicle that is capable of
@@ -235,7 +248,7 @@ moving and navigating on its own might have on the reach of a hacker or negligen
 
 Additionally, Google has envisioned vehicles that can determine their number of
 occupants, and use facial-recognition or other biometric systems to
-identify them. According to one patent,\cite{predictPatent} these vehicles could prevent
+identify them. According to one patent \cite{predictPatent}, these vehicles could prevent
 unauthorized persons from putting a child in a car, prevent convicted
 sex offenders from operating their vehicles within the
 legally-required distances of schools and playgrounds, or prevent a
@@ -254,7 +267,13 @@ histories, family and trust networks.
 
 Prevailing data ideology tells us that we can understand ourselves better through
 these data, that we can use them to determine patterns we never knew were
-there. Out of this ideology come publications like Uber's blog\footnote{???}, which
+there. Out of this ideology come publications like Uber's
+blog\footnote{See blog.uber.com. One particularly noteworthy post,
+  from March of 2012, was about customers' ``Rides of Glory''---in
+  other words, one-night-stands. This post was later taken down by the
+Uber team, but articles about it remain \cite{gigaom_harris}. Another
+post about the connection between Uber rides and areas of
+crime---notably prostitution---was also removed \cite{venturebeat_obrien}.}, which
 describes customer ``insights'' gained through their ride data, which
 are ostensibly interesting to the public. ``Look here,'' they seem to
 say, ``we can tell you about \emph{you}.'' But it important to
@@ -290,7 +309,7 @@ Localization has been a fundamental issue for robotics since the
 beginning of the field. In order to figure out how to act, a robot
 needs to know where it is; and in general, robotic environments can be
 expected to change rapidly with motion, and to vary significantly from
-place-to-place\cite[p. 4]{SLAMbook}. Motions cannot, for the most part,
+place-to-place \cite[p. 4]{SLAMbook}. Motions cannot, for the most part,
 be pre-planned:  they must continually be reevaluated in new and
 emerging situations, as the robot moves through the environment. As a
 key part of this puzzle the robot must be able to determine its own
@@ -302,7 +321,7 @@ severely limits the range of behavior that is possible. Without
 reference to the environment, errors slowly accrue, and a system that
 navigates in a known space without localization will find itself
 getting further and further off-track.} component of successful
-navigation.\cite[p. 5]{SLAMbook} This relation can be expressed
+navigation \cite[p. 5]{SLAMbook}. This relation can be expressed
 in different forms---either quantitative representations such as maps,
 or logical, prepositional statements---and these representations carry
 their own techniques of interpretation. 
@@ -313,17 +332,17 @@ estimate a robot's position, those elements themselves must be known
 in order to perform this process. Mapping is the complementary
 process, the estimation of ``\emph{unknown} spatial relations that
 exist between environment elements'' in order to allow for subsequent
-navigation\cite[p. 5]{SLAMbook}. There is a somewhat tricky
+navigation \cite[p. 5]{SLAMbook}. There is a somewhat tricky
 precedence problem we face here:  in order to build maps with
 autonomous systems, they must know where they are; in order to know
 where they are, they must have maps with which to measure
-against.\cite[p. 6]{SLAMbook}
+against \cite[p. 6]{SLAMbook}.
 
 Returning to the history of AI,
 localization was part of the cause of the poor performance of the
 robot Shakey: world modeling through a symbolic approach was slow,
 which was rendered even more problematic by the relative lack of
-computing power.\cite[Afterword]{mccorduck}
+computing power \cite[Afterword]{mccorduck}.
 Though one way to determine robot position in the world is through
 simultaneous localization and mapping (SLAM)---a serious research area in
 robotics, as it is ideal for areas that are impractical to map
@@ -337,12 +356,12 @@ the environment, but building a robot that exhibits complex and
 predictable behaviors in complex environments, through this approach,
 is exceedingly difficult, as evidenced by Brooks's shift to hybrid
 modeling approaches. But new AI techniques do allow researchers to
-take advantage of new kinds of data.\cite{???} Today, localization and
+take advantage of new kinds of data \cite{???}. Today, localization and
 mapping are both considered ``satisfactorily solved in practical
 situations''---though SLAM techniques
 are still somewhat less reliable or developed---given sufficient
-computational resources and environmental data.\cite[p.
-  5-6]{SLAMbook}
+computational resources and environmental data \cite[p.
+  5-6]{SLAMbook}.
 
 %%Fernández-Madrigal, Juan-Antonio, and José Luis Blanco Claraco.
 %%2013. Simultaneous Localization and Mapping for Mobile Robots :
@@ -359,12 +378,12 @@ road tests have been accomplished without navigational assistance,
 using only visual stimuli (such as the EUREKA PROMETHEUS project
 in the 1990s, which navigated only with cameras and therefore could
 only follow the road in an automated fashion, rather than navigate to
-given GPS coordinates)\cite{UlmerVITA}, modern systems are tending to use more external
+given GPS coordinates) \cite{UlmerVITA}, modern systems are tending to use more external
 stimuli, rather than less, in an attempt to increase safety and
 vehicle capability. Even as
 advanced as it is, Google's autonomous vehicle technology requires
 hyper-detailed 3D maps in order to operate properly on public
-roadways.\cite{gomesObstacles} These maps are generated by human-piloted vehicles outfitted with
+roadways \cite{gomesObstacles}. These maps are generated by human-piloted vehicles outfitted with
 special sensor arrays, like the LIDAR Google uses for their autonomous
 vehicles, which drive a route and collect data which can be used to
 reconstruct the model used for future drives.\footnote{Nhai Cao
@@ -376,19 +395,19 @@ Pre-made maps are used so the vehicle knows where stoplights, signs,
 and curbs are, reducing the computational load on the machine in the
 crowded visual landscape of driving, and allowing it to focus on
 elements of the environment that are changing rather than those likely
-to be static.\cite{gomesObstacles} Prior knowledge of speed limits should make the car's
+to be static \cite{gomesObstacles}. Prior knowledge of speed limits should make the car's
 behavior more reliable and predictable in all conditions, even if
 speed limit signs are missing or obscured---consider how often human
 drivers, when faced with an absence of signs, base their behaviors on
 supposition or prior knowledge. When Google's car was certified for
 testing in Nevada, Google was allowed to pre-select the route the car
 would take, so that they could build the comprehensive model the
-system requires beforehand.\cite{harrisNevada} The system would likely not have been
+system requires beforehand \cite{harrisNevada}. The system would likely not have been
 capable of passing a test in which the examiner could have added
 detours on the fly. And though Google claims to have driven more than
 700,000 miles with their cars, those are not 700,000 unique miles. A
 limited, thoroughly pre-mapped route has been driven many times to
-achieve those numbers.\cite{gomesCircles}
+achieve those numbers \cite{gomesCircles}.
 
 
 %%TODO Karen Kaplan
@@ -398,7 +417,7 @@ and diagrammatically, but also requires that world to remain largely
 static, at least on the order of how long it takes to update the map
 for a particular region. The necessary level of continual mapping is a massive task if the
 vehicles must be usable everywhere. The United States alone contains almost
-8.5 million road miles\footnote{Data as of 2008\cite{carneyMiles}},
+8.5 million road miles\footnote{Data as of 2008 \cite{carneyMiles}},
 and it took years for Google Streetview to acquire the level of
 coverage it currently has. The maps required for driverless car
 localization are a significantly more difficult project in terms of
@@ -411,7 +430,8 @@ widespread mapping initiative. The success of such an initiative is
 dependent not only on a large amount of human effort and capital
 investment, but a series of decisions about what regions should take priority.
 
-TomTom\cite{???} and Nokia\cite{???} both claim to be attempting such a mapping project,
+TomTom\cite{tomtommaps} and Nokia\cite{ubergizmo} both claim to be attempting such
+a mapping project,
 but it will not happen immediately or all-at-once. More likely,
 certain areas will be 
 mapped and restricted, or separate divided public rapid transit
@@ -467,15 +487,16 @@ particularly easy for human beings, but particularly difficult for
 machines. The invention of the photocell, early a tool for workplace
 monitoring and surveillance, provided a simple channel through which
 electrical systems could respond to the amount of light reaching
-them.\cite{???} Though the photocell can easily provide a computer system
+them\cite[p. 44]{faxed} \cite[p. 361]{nyeElectrifying}. Though the photocell can easily
+provide a computer system 
 with access to brightness information over time, perceiving detail and
 depth, identifying shapes, and interpreting expression and motion are
 all capabilities of human vision that require more sophisticated
 technologies to reproduce. DARPA's 1983 Strategic Computing Initiative
 included image interpretation as one of its main
-focus areas.\cite{???} But it is only relatively recently that real-time video
+focus areas \cite[Afterword]{mccorduck}. But it is only relatively recently that real-time video
 processing, needed for camera-based navigation, became feasible for computer
-systems small enough to fit in a standard automobile.\cite{???} And machine
+systems small enough to fit in a standard automobile \cite{vamors-p}. And machine
 vision problems, including object recognition and scene
 interpretation, continue to be difficult, even with increased
 processing power and new algorithms. 
