--- a/chap3.tex
+++ b/chap3.tex
@@ -1234,7 +1234,15 @@ it could be a vibrant space presenting unparalleled new possibilities
 for human-machine interaction.
 
 Attention, and how to preserve, regulate, monitor, and transact it,
-must be at the center of vehicle development. And the parameters of
+must be at the center of vehicle development.\footnote{I must add here
+that attention alone is also not na\"{\i}vely a good thing:
+human attention and supervision can be creative (the manager) or
+menial (the machine-tender). As one would expect from the analogy with
+factory organization, this issue is deeply political. Who gets what
+kind of agency, and exerts what kind of attention, is at the center of
+the human-machine dynamic in automation technology. Not focusing on
+the role of human attention risks that these decisions get made
+by fiat, on the basis of other factors.} And the parameters of
 these interactions are in part defined by the end goal. Much popular
 discussion centers around texting as a need for automated cars. But as
 David Mindell describes,``wanting to text is different
@@ -1242,7 +1250,15 @@ from needing a fully automated vehicle,''\footnote{David Mindell,
   discussion with the author, September 8, 2014} and it seems quite possible
 to create a vehicle that will allow distractions on the order of the
 time span of writing and sending a text even if it is not feasible, or
-not culturally acceptable, to build one that is fully automated. While
+not culturally acceptable, to build one that is fully
+automated.\footnote{Recent AAA research on teen accidents shows
+  distraction to be a factor in 58\% of crashes, and that drivers were
+not paying attention to the road for an average of 4.1 out of the
+final 6 seconds before the crash. This suggests that a system able to
+maintain control of the vehicle for times on the order of 10 seconds,
+and stop it safely if necessary, could do a lot to address this kind
+of distraction---that is assuming, of course, that risk homeostasis
+can be mitigated.} While
 the latter means that long periods of time might go by without human
 monitoring (perhaps minutes or even hours, depending on system
 design), the former merely requires an operator to be able to be 
@@ -1290,7 +1306,11 @@ however deep in the margins of our vision. Writing this off as
 anomalous or a failure, and focusing on ``autonomy'' or ``self-driving,''
 obscures real complexities of operation that encounters with the world
 will inevitably involve. The important question is when/how are people
-involved, and this should be empirically not ideologically driven.
+involved, and this should be empirically not ideologically
+driven.\footnote{Of course beliefs and ideologies are always involved
+  in decision making, but we should at least air them for all to see,
+  and weight them carefully, rather than blindly following a dominant
+  idea of the uses of technology.}
 Perhaps there is hope in this altered narrative to ameliorate some of
 the issues facing automated vehicles today. 
 
