--- a/chap4.tex
+++ b/chap4.tex
@@ -12,7 +12,7 @@ and it is time that our viewpoint shifts to recognize this fact. We
 are not embarking on a move from total human operation to total
 machine operation, and therefore from total human agency to total
 machine agency, but a change in the blend of capacities and the
-technologies involved in vehicle operations. We are already cyborgs,
+technologies involved in vehicle operations. In other words, we are already cyborgs,
 and this view has a number of implications for our public and
 political engagement with technology.
 
