--- a/chap5.tex
+++ b/chap5.tex
@@ -202,7 +202,24 @@ not alone bring about those changes, but their presence, availability,
 and market viability provide incentives for groups to encourage broad
 social and infrastructural changes. The automated vehicle represents a
 another possible nexus for change, but how the city will be re-shaped
-is an open question. As I held in chapter \ref{chap:2}, however, that
-change should not be arbitrary, at the whims of a certain set of
+is an open question. Problematically, the automated car---like the
+``smart city'' which is already been critiqued in this
+way\cite{???}---presents the opportunity for successful technology
+companies to wrest greater control over everyday life, to worm their
+way more deeply into our existence and thereby make themselves
+indispensable. Automation can be a tool to enable one group of
+people---technologists running multinational organizations---at the
+expense of the rest of us.\footnote{This is at least a relatively clear and
+predictable corporate strategy. Opposing it will not be easy, but it
+should at least help to be clear that these are the stakes involved.}
+But it also does not have to be employed toward those ideological
+ends; given sufficient willpower, it can be made to serve others.
+As I held in chapter \ref{chap:2}, changes to the city
+should not be arbitrary, at the whims of a certain set of
 producers and organizations, but part of a large-scale system design
-strategy to address the needs of all transportation users.
+strategy to address the needs of all transportation users. To the list
+of major questions facing us as a result of this technology, we should
+add: how do we make transportation technology and urban planning sensitive to social
+justice and responsive to a broad base of citizens, and inoculate it
+against takeover by corporate entities that have only their own best interests
+in mind?
