--- a/concl.tex
+++ b/concl.tex
@@ -84,7 +84,11 @@ more fully automated one, something even the Department of Defense,
 hardly a bunch of technophobes, finds it important to recognize---but
 it is also a valuable approach for 
 systems that are tasked with keeping us safe, whether in space, in the
-air, or on the ground. And this is especially true as we will use our
+air, or on the ground. In applying this approach, however, it is
+important to keep in mind the extent to which we are re-making
+ourselves into managers or into machine tenders:  Are we maintaining a sense of
+creative agency? Or becoming wheels in the machinery of capital? And
+this is especially true as we will use our 
 vehicles every day, and cannot afford to alienate ourselves from them.
 A future in which our transportation system is indifferent to us is
 not a productive future to be lauded, but a destructive one to be
@@ -339,4 +343,7 @@ Recognizing that continued human involvement will occur as a matter of principle
 the most important first step we can take toward rebalancing the
 narrative of automation toward something more productive, which takes
 seriously the technological hybridity of our past, present and future.
+And it paves the way for a political critique that asks, knowing
+that humans remain involved, who they are, where they are, and how
+the system is being designed to serve their needs or impede their agency.
 
