--- a/cover.tex
+++ b/cover.tex
@@ -45,11 +45,20 @@
 % however the specifications can change.  We recommend that you verify the
 % layout of your title page with your thesis advisor and/or the MIT 
 % Libraries before printing your final copy.
-\title{Vehicles of Ideology: Narratives, Impacts, and the Shape of the
-  Self-Driving Car}
+\title{Driverless Dreams: Narratives, Ideologies, and the Shape of the
+Automated Car}
 %% Replacing or Augmenting the Human
 %% Chauffeurs or Cyborgs: Ideologies and the Shape of the Self-Driving Car
-%TODO change the title of my other piece if I go with this thesis title
+%TODO change the title of my other piece if I go with this thesis
+%title
+%Self-Driving Stories: Automated Vehicles and the Human Being
+%The Shape of the Self-Driving Car: Ideologies, Strategies, and the
+%Human Being
+%Vehicles of Ideology: Narratives, Impacts, and the Shape of the
+%  Self-Driving Car
+%Self-Driving Dreams: Narratives, Ideologies, and the Shape of the
+%Automated Car
+
 
 
 \author{Erik Stayton}
@@ -64,7 +73,7 @@
 % If the thesis is for two degrees simultaneously, list them both
 % separated by \and like this:
 % \degree{Doctor of Philosophy \and Master of Science}
-\degree{Bachelor of Science in Comparative Media Studies}
+\degree{Master of Science in Comparative Media Studies}
 
 % As of the 2007-08 academic year, valid degree months are September, 
 % February, or June.  The default is June.
@@ -76,7 +85,7 @@
 %% the thesis to yourself, just specify the `vi' documentclass option.  If for
 %% some reason you want to exactly specify the copyright notice text, you can
 %% use the \copyrightnoticetext command.  
-\copyrightnoticetext{\copyright Erik Stayton, 2015. All rights reserved.}
+%%\copyrightnoticetext{\copyright Erik Stayton, 2015. All rights reserved.}
 
 % If there is more than one supervisor, use the \supervisor command
 % once for each.
@@ -86,7 +95,7 @@
 % This is the department committee chairman, not the thesis committee
 % chairman.  You should replace this with your Department's Committee
 % Chairman.
-\chairman{T. L. Taylor}{Department Chair, Director of Graduate Studies}
+\chairman{T. L. Taylor}{Department Committee Chair, Director of Graduate Studies}
 
 % Make the titlepage based on the above information.  If you need
 % something special and can't use the standard form, you can specify
