--- a/main.bib
+++ b/main.bib
@@ -773,6 +773,47 @@
    pages = "36--41",
 }
 
+@ARTICLE{ubergizmo,
+   author = "Tyler Lee",
+   title = "{N}okia's {HERE} {M}aps {P}owers {S}elf-{D}riving {M}ercedes {S}-{C}lass {V}ehicle",
+   journal = "Ubergizmo",
+   year = 2014,
+   month = "May 16",
+   note = "http://www.ubergizmo.com/2014/05/nokias-here-maps-powers-self-driving-mercedes-s-class-vehicle/",
+}
+
+@ARTICLE{tomtommaps,
+   author = "Jon Knox",
+   title = "{R}eal-time maps are game changers",
+   journal = "TOMTOM - Connected Car Report",
+   note = "http://www.connectedcar.org.uk/tomtom/4584538397",
+}
+
+@ARTICLE{gigaom_harris,
+   author = "Derrick Harris",
+   title = "{T}he one-night stand, quantified and visualized by {U}ber",
+   journal = "Gigaom",
+   year = 2012,
+   month = "March 26",
+   note = "https://gigaom.com/2012/03/26/uber-one-night-stands/",
+}
+
+@ARTICLE{venturebeat_obrien,
+   author = "Chris O'Brien",
+   title = "{U}ber removed blog post from data science team that examined link between prostitution and rides",
+   journal = "VentureBeat",
+   year = 2014,
+   month = "November 24",
+   note = "http://venturebeat.com/2014/11/24/uber-removed-blog-post-from-data-science-team-that-examined-link-between-prostitution-and-rides/",
+}
+
+@ARTICLE{vamors-p,
+   author = "E. D. Dickmanns and R. Behringer and D. Dickmanns and T. Hildebrandt and M. Maurer and F. Thomanek and J. Schiehlen",
+   title = "{T}he {S}eeing {P}assenger {C}ar '{V}a{M}o{R}s-{P}'",
+   journal = "Proceedings of the Intelligent Vehicles '94 Symposium",
+   year = 1994,
+   pages = "68--73",
+}
 
 
 
